tests/baselines/reference/Protected7.errors.txt
Protected7.ts(2,13): error TS1028: Accessibility modifier already seen.


==== Protected7.ts (1 errors) ====
    class C {
      protected private m() { }
                ~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }